--- a/examples/Scenes/Toad.html
+++ b/examples/Scenes/Toad.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <title>Toad</title>
 </head>
-<script src="../../build/try3d.min.js"></script>
+<!--<script src="../../build/try3d.min.js"></script>-->
+<script type="module">
+    import Try3d from '../../src/Try3d.js';
+    window.Try3d = Try3d;
+</script>
 <script src="../helpers.js"></script>
 <body>
     <div style="width: 100%;height: 100%;position:fixed;margin: 0px;padding: 0px;left: 0px;top: 0px;margin: 0px;">
@@ -15,8 +19,6 @@
         // 创建场景对象(渲染器至少包含一个scene,否则,将什么事情都不做)
         let scene = new Try3d.Scene({cavnas:document.getElementById('canvas')});
         scene.getCanvas().setClearColor(1.0, 1.0, 1.0, 1.0);
-        // 内置ColorDef
-        let colorDef = Try3d.MaterialDef.parse(Try3d.Internal.S_COLOR_DEF_DATA);
 
         // 定义一个根节点
         let rootNode = new Try3d.Node(scene, {id:'rootNode'});
@@ -47,10 +49,18 @@
                 sceneControl.lookScene(rootNode);
                 sceneControl.setTargetAngle(Try3d.MoreMath.toRadians(30));
                 sceneControl.setTargetVerticalAngle(Try3d.MoreMath.toRadians(20));
+                sceneControl.setMinRotation(Try3d.MoreMath.toRadians(5));
+                sceneControl.setMaxRotation(Try3d.MoreMath.toRadians(45));
+                sceneControl.setMaxVerticalRotation(Try3d.MoreMath.toRadians(25));
+                sceneControl.setMinVerticalRotation(Try3d.MoreMath.toRadians(15));
+                sceneControl.setVeryCloseRotation(false);
+                sceneControl.setMaxDistance(0.8);
+                sceneControl.setMinDistance(0.4);
                 sceneControl.setTargetDistance(0.7);
-                sceneControl.setMinDistance(0.2);
-                sceneControl.setMinVerticalRotation(Try3d.MoreMath.toRadians(1));
                 sceneControl.focusCamera();
+
+                addBloom(scene, 0.2, 2.2, 0.5);
+                addDof(scene, 0.4, 0.055, 1.2, 1.2);
             }, {batch:false});
 
             let dirLight = new Try3d.DirectionalLight(scene, {id:'dirLight'});
