--- a/examples/Test.html
+++ b/examples/Test.html
@@ -238,6 +238,8 @@
         console.log('subWidth:'+subWidth);
         console.log('subHeight:'+subHeight);
         console.log('m:'+m.toString());
+        let i = 1;
+        console.log('i >> 1:' + (i >> 1) + ";i >> 2:" + (i >> 2));
 
     </script>
     <!--<script>-->
