--- a/examples/Lights/PrecomputedLightFieldProbes.html
+++ b/examples/Lights/PrecomputedLightFieldProbes.html
@@ -26,19 +26,19 @@
     let radianceLoader = new Try3d.RadianceLoader();
     radianceLoader.loadHDR('./../Assets/Textures/hdr/newport_loft.hdr', imageData=>{
         // 创建一个sky
-        let sky = new Try3d.SkyBox(scene, {id:'sky'});
-        // 使用cubeMap作为天空盒材质
-        let envMap = new Try3d.Texture2DVars(scene);
-        envMap.setPreloadColor(scene, new Try3d.Vector4(0.5, 0.5, 0.5, 1.0));
-        envMap.setWrap(scene, Try3d.Texture2DVars.S_WRAPS.S_CLAMP_TO_EDGE, Try3d.Texture2DVars.S_WRAPS.S_CLAMP_TO_EDGE);
-        envMap.setFilter(scene, Try3d.Texture2DVars.S_FILTERS.S_LINEAR, Try3d.Texture2DVars.S_FILTERS.S_LINEAR);
-        envMap.setTextureFormat(Try3d.Texture2DVars.S_TEXTURE_FORMAT.S_RGB16F, Try3d.Texture2DVars.S_TEXTURE_FORMAT.S_RGB, Try3d.Texture2DVars.S_TEXTURE_FORMAT.S_FLOAT);
-        envMap.setImage(scene, imageData, {rgbe:true, linearFloat:true});
-        sky.getMaterial().setParam('envMap', envMap);
-        sky.getMaterial().setParam('useEnvMap', new Try3d.BoolVars().valueOf(true));
-        sky.getMaterial().setParam('useHDR', new Try3d.BoolVars().valueOf(true));
-
-        scene.setSky(sky);
+        // let sky = new Try3d.SkyBox(scene, {id:'sky'});
+        // // 使用cubeMap作为天空盒材质
+        // let envMap = new Try3d.Texture2DVars(scene);
+        // envMap.setPreloadColor(scene, new Try3d.Vector4(0.5, 0.5, 0.5, 1.0));
+        // envMap.setWrap(scene, Try3d.Texture2DVars.S_WRAPS.S_CLAMP_TO_EDGE, Try3d.Texture2DVars.S_WRAPS.S_CLAMP_TO_EDGE);
+        // envMap.setFilter(scene, Try3d.Texture2DVars.S_FILTERS.S_LINEAR, Try3d.Texture2DVars.S_FILTERS.S_LINEAR);
+        // envMap.setTextureFormat(Try3d.Texture2DVars.S_TEXTURE_FORMAT.S_RGB16F, Try3d.Texture2DVars.S_TEXTURE_FORMAT.S_RGB, Try3d.Texture2DVars.S_TEXTURE_FORMAT.S_FLOAT);
+        // envMap.setImage(scene, imageData, {rgbe:true, linearFloat:true});
+        // sky.getMaterial().setParam('envMap', envMap);
+        // sky.getMaterial().setParam('useEnvMap', new Try3d.BoolVars().valueOf(true));
+        // sky.getMaterial().setParam('useHDR', new Try3d.BoolVars().valueOf(true));
+        //
+        // scene.setSky(sky);
 
         let gltfLoader = new Try3d.GLTFLoader();
         gltfLoader.setAssetsPath("../../src/Core/Assets/MaterialDef/Light/");
